--- a/packages/subtract/deno.json
+++ b/packages/subtract/deno.json
@@ -7,7 +7,6 @@
   },
 
   "imports": {
-    "@std/log": "jsr:@std/log@^0.224.14",
-    "~/": "./src/"
+    "@std/log": "jsr:@std/log@^0.224.14"
   }
 }
